--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
   gtag('config', 'G-HG8YT6QPS2');
 <script data-ad-client="ca-pub-7974227967160490" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</head>
+	
 <body>
 
 <div class="perspective effect-rotate-left">
