--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
 
   gtag('config', 'G-HG8YT6QPS2');
 <script data-ad-client="ca-pub-7974227967160490" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-	https://www.google.com/url?q=https://notifications.google.com/g/p/AD-FnExe84kSG5pl3_QaSOYPsoQXgGAxOhz5P_k6iy_klcdYEjo37BGDHrGmHbH_oKpBL39_MrXNsFnenIXRij5C41GYW-l4Vij5k0bljaQA&source=gmail&ust=1615985362420000&usg=AFQjCNESJUMUdmJ6PYYN2RRHWkoezikBoA
 </head>
 	
 <body>
-
+<script type="text/javascript">
+var infolinks_pid = 3315839;
+var infolinks_wsid = 0;
+</script>
+<script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
 <div class="perspective effect-rotate-left">
   <div class="container"><div class="outer-nav--return"></div>
     <div id="viewport" class="l-viewport">
