--- a/404.html
+++ b/404.html
@@ -1,3 +1,8 @@
 <html>
-  <meta http-equiv="refresh" content="time; URL=new_url" />
+<head>
+<meta http-equiv="refresh" content="1; URL=https://KartikJain14.github.io/" />
+</head>
+<body>
+  <p><a href="https://KartikJain14.github.io/">Click here If YOu Have Not Been redirected.</a></p>
+</body>
 </html>
