--- a/404.html
+++ b/404.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="0; URL=https://KartikJain14.github.io/" />
+<meta http-equiv="refresh" content="3; URL=https://KartikJain14.github.io/" />
 </head>
 <body>
-  <p><a href="https://KartikJain14.github.io/">Click here If YOu Have Not Been redirected.</a></p>
+  <p>If You Have Not Been redirected at <a href="https://KartikJain14.github.io/">vannaaaa.ml</a> within 3 Seconds, <a href="https://KartikJain14.github.io/">Click here</a></p>
 </body>
 </html>
