--- a/404.html
+++ b/404.html
@@ -1,8 +1,8 @@
     <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='https://KartikJini14.github.io" />
+    <meta http-equiv="refresh" content="0; url='https://KartikJain14.github.io" />
   </head>
   <body>
-    <p>Please follow <a href="https://KartikJini14.github.io">this link</a>.</p>
+    <p>Please follow <a href="https://KartikJain14.github.io">this link</a>.</p>
   </body>
 </html>
