--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <div class="hire">
               <h2>Submit Your Details Here For Collaboration</h2>
               <!-- checkout formspree.io for easy form setup -->
-              <form class="work-request" action="https://formspree.io/f/xleokaoa" method="POST">
+              <form class="work-request" action="https://formspree.io/f/mayawnvo" method="POST">
                 <div class="work-request--information">
                   <div class="information-name">
                     <input id="name" type="text" spellcheck="false" name="name">
