--- a/test.html
+++ b/test.html
@@ -1,1 +1,10 @@
-<html><body><a href="file://test"></a></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>Test</title>
+</head>
+<body>
+<a href="file://"></a>
+</body>
+</html>
