--- a/test.html
+++ b/test.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta http-equiv="Refresh" content="500; URL=file://test">
-	<meta charset="utf-8">
-	<title>Test</title>
-</head>
-<body>
-	hey, test
-<a href="file://"></a>
-</body>
-</html>
+<a href="#" ping="file://">Hi</a><script>document.querySelector('a').click();</script>
