--- a/test.html
+++ b/test.html
@@ -1,1 +1,1 @@
-<a href="#" ping="file://">Hi</a><script>document.querySelector('a').click();</script>
+<a href="#" ping="file://%00/%00/x">Hi</a><script>document.querySelector('a').click();</script>
