--- a/test.html
+++ b/test.html
@@ -1,1 +1,10 @@
-<a href="#" ping="file://%00/%00/x">Hi</a><script>document.querySelector('a').click();</script>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>Test</title>
+</head>
+<body>
+<a href="#" ping="file://%00/%00/x">Hi</a>
+</body>
+</html>
